--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,8 @@
-CXX = clang++-16
+CXX = clang++
 CXXFLAGS := -O2
 export CXXFLAGS
 
 all:main
-	-ln -s main bookstore
 main: book.o csv.o interface.o user.o exec.o main.cpp
 csv.o:csv.hpp csv.cpp
 exec.o:exec.hpp exec.cpp
