--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: cd
+      run: cd src
     - name: make
       run: make
+    - name: rename
+      run: mv main ../main-linux-amd64
