--- a/.github/workflows/c-cpp-make-linux.yml
+++ b/.github/workflows/c-cpp-make-linux.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Linux-Build
 
 on:
   push:
@@ -11,8 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: autoconf
+      run: ./configure
     - name: make
-      working-directory: ./src
       run: make
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
@@ -20,5 +21,5 @@ jobs:
       # Artifact name
         name: main-linux-amd64 # optional, default is artifact
       # A file, directory or wildcard pattern that describes what to upload
-        path: ./src/main
+        path: ./bookstore
       # The desired behavior if no files are found using the provided path.
