--- a/.github/workflows/self-macOS-arm64.yml
+++ b/.github/workflows/self-macOS-arm64.yml
@@ -1,4 +1,4 @@
-name: Linux-Build
+name: self-macOS-aarch64-build
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: of-EvanMacbook
     steps:
       - uses: actions/checkout@v3
       - name: autoconf
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with:
           # Artifact name
-          name: main-linux-amd64 # optional, default is artifact
+          name: main-self-macOS-arm64 # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
           path: ./bookstore
         # The desired behavior if no files are found using the provided path.
