--- a/.github/workflows/self-ubuntu-amd64.yml
+++ b/.github/workflows/self-ubuntu-amd64.yml
@@ -1,4 +1,4 @@
-name: Linux-Build-selfhost
+name: self-ubuntu-amd64-build
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with:
           # Artifact name
-          name: main-linux-amd64 # optional, default is artifact
+          name: main-self-linux-amd64 # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
           path: ./bookstore
         # The desired behavior if no files are found using the provided path.
