--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -9,12 +9,12 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up MinGW
-        uses: egor-tensin/setup-mingw@v2
-        with:
-          platform: x64
+      - name: checkout
+        uses: actions/checkout@v3
       - name: autoconf
         shell: bash
         run: ./configure
