--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -14,16 +14,17 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      # - name: autoconf
-      #   run: ./configure
+      - name: autoconf
+        working-directory: ./
+        run: ./configure
       - name: make
-        working-directory: ./src
+        working-directory: ./
         run: make
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
           # Artifact name
-          name: main-windows-amd64 # optional, default is artifact
+          name: main-windows-amd64.exe # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: ./src/main
+          path: ./bookstore.exe
         # The desired behavior if no files are found using the provided path.
