--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -14,11 +14,11 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      - name: autoconf
-        working-directory: ./
-        run: ./configure
+      # - name: autoconf
+      #   working-directory: ./
+      #   run: ./configure
       - name: make
-        working-directory: ./
+        working-directory: ./src
         run: make
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
@@ -26,5 +26,5 @@ jobs:
           # Artifact name
           name: main-windows-amd64.exe # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: ./bookstore.exe
+          path: ./src/main
         # The desired behavior if no files are found using the provided path.
