--- a/.github/workflows/self-ubuntu-amd64.yml
+++ b/.github/workflows/self-ubuntu-amd64.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: autoconf
-        run: ./configure
+        run: ./configure CXXFLAGS="-static" LDFLAGS="-static"
       - name: make
         run: make
       - name: Upload a Build Artifact
