--- a/.github/workflows/self-macOS-arm64.yml
+++ b/.github/workflows/self-macOS-arm64.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: autoconf
-        run: ./configure
+        run: ./configure 'CXXFLAGS=-stdlib=libc++ '
       - name: make
         run: make
       - name: Upload a Build Artifact
