testing self ubuntu

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_INIT([bookstore],[0.1])
 AC_CONFIG_SRCDIR([src])
 AC_CONFIG_AUX_DIR([build_aux])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
-CXXFLAGS+="$CXXFLAGS -O2 -std=c++17"
+CXXFLAGS+="-O2 -std=c++17"
 AC_PROG_CXX([clang++ g++])
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
