--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -20,6 +20,9 @@ jobs:
       - name: make
         working-directory: ./src
         run: make
+      - name: list
+        working-directory: ./src
+        run: ls -l
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
