--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -20,14 +20,14 @@ jobs:
       - name: make
         working-directory: ./src
         run: make
-      - name: list
+      - name: rename
         working-directory: ./src
-        run: ls -l
+        run: mv main.exe bookstore.exe
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
           # Artifact name
-          name: main-windows-amd64.exe # optional, default is artifact
+          name: main-windows-amd64 # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: ./src/main
+          path: ./src/main.exe
         # The desired behavior if no files are found using the provided path.
