--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -29,5 +29,5 @@ jobs:
           # Artifact name
           name: main-windows-amd64 # optional, default is artifact
           # A file, directory or wildcard pattern that describes what to upload
-          path: ./src/main.exe
+          path: ./src/bookstore.exe
         # The desired behavior if no files are found using the provided path.
