--- a/.github/workflows/windows-minGW-amd64.yml
+++ b/.github/workflows/windows-minGW-amd64.yml
@@ -22,7 +22,7 @@ jobs:
         run: make
       - name: rename
         working-directory: ./src
-        run: mv main.exe bookstore.exe
+        run: mv main bookstore.exe
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
