--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 
 # Executables
 *.exe
+!main-windows-amd64.exe
 *.out
 *.app
 
@@ -61,7 +62,6 @@ autom4te.cache
 /config.log
 /config.status
 /config.sub
-/configure
 /configure.scan
 /depcomp
 /install-sh
@@ -89,5 +89,6 @@ m4/lt~obsolete.m4
 # can automatically generate from config.status script
 # (which is called by configure script))
 Makefile
+!src/Makefile
 
 
